--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     username: root
-    password: '061313'
+    password: '123456'
     url: jdbc:mysql:///xdb
 #    driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
@@ -19,3 +19,23 @@ mybatis-plus:
       logic-delete-field: deleted # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+knife4j:
+  enable: true
+  openapi:
+    title: x-admin接口测试
+    description: "`我是测试`,**你知道吗**
+    # aaa"
+    email: 1614177037@qq.com
+    concat: 八一菜刀
+    url: https://docs.xiaominfo.com
+    version: v4.0
+    license: Apache 2.0
+    license-url: https://stackoverflow.com/
+    terms-of-service-url: https://stackoverflow.com/
+    group:
+      test1:
+        group-name: 分组名称
+        api-rule: package
+        api-rule-resources:
+          - com.cheng.sys.controller
